<resources>
    <string name="app_name">ThermoKingTask</string>
    <string name="txt_customer">Customer</string>
    <string name="txt_vehicle_id">Vehicle ID</string>
    <string name="txt_mobile_num">Mobile Numer</string>
    <string name="txt_reefer">Reefer</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="txt_vehicle_name">Vehicle Name</string>
    <string name="txt_sensor_name">Sensor Name</string>
    <string name="txt_sensor_type">Sensor Type</string>
    <string name="txt_mac">MAC</string>
    <string name="hint_mac">00:00:00:00:00</string>
    <string name="txt_location">Location</string>
    <string name="txt_zone">Zone</string>
    <string name="txt_serial_number">Serial Number</string>
    <string name="hint_serial_number">KOPSDOVM232</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_save">Save</string>
    <string name="dialog_sensor_details">Sensor Details</string>
    <string name="dialod_sensor_updated">Sensor Updated</string>
    <string name="dialog_sensor_update_message">Sensor updated successfully</string>
    <string name="dialog_failed_title">Failed</string>
    <string name="dialog_sensor_update_failed_message">Something went wrong while updating the sensor details."\n"Please try again.</string>
    <string name="btn_load_vehicle_data">Load vehicle data</string>
    <string name="btn_reload_vehicle_data">Reload Vehicle Data</string>
</resources>